El proyecto mejorado

--- a/ProyectoTTT.ipynb
+++ b/ProyectoTTT.ipynb
@@ -3,73 +3,235 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4ed516",
+   "id": "bad4674d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  |   |  \n",
+      "---------\n",
+      "  | O |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "\n",
+      "Tu turno (X)\n",
+      "Turno de la máquina (O)\n",
+      "\n",
+      "X | O |  \n",
+      "---------\n",
+      "  | O |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "\n",
+      "Tu turno (X)\n",
+      "Esa casilla ya está ocupada.\n",
+      "\n",
+      "X | O |  \n",
+      "---------\n",
+      "  | O |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "\n",
+      "Tu turno (X)\n",
+      "Turno de la máquina (O)\n",
+      "\n",
+      "X | O | O\n",
+      "---------\n",
+      "  | O |  \n",
+      "---------\n",
+      "  | X |  \n",
+      "\n",
+      "Tu turno (X)\n",
+      "Turno de la máquina (O)\n",
+      "\n",
+      "X | O | O\n",
+      "---------\n",
+      "O | O |  \n",
+      "---------\n",
+      "X | X | O\n",
+      "\n",
+      "Tu turno (X)\n",
+      "Esa casilla ya está ocupada.\n",
+      "\n",
+      "X | O | O\n",
+      "---------\n",
+      "O | O |  \n",
+      "---------\n",
+      "X | X | O\n",
+      "\n",
+      "Tu turno (X)\n",
+      "Esa casilla ya está ocupada.\n",
+      "\n",
+      "X | O | O\n",
+      "---------\n",
+      "O | O |  \n",
+      "---------\n",
+      "X | X | O\n",
+      "\n",
+      "Tu turno (X)\n",
+      "Turno de la máquina (O)\n",
+      "Empate. Nadie gana.\n"
+     ]
+    }
+   ],
    "source": [
-    "def print_board(board):\n",
-    "    for row in board:\n",
-    "        print(\" | \".join(row))\n",
-    "        print(\"-\" * 9)\n",
+    "tablero = [[\" \"]*3 for _ in range(3)]\n",
+    "jugador = \"X\"\n",
+    "maquina = \"O\"\n",
     "\n",
-    "def check_winner(board, player):\n",
-    "    # Verifica filas y columnas\n",
+    "# Movimiento fijo para asegurar que la máquina gane\n",
+    "# La máquina siempre empieza en el centro\n",
+    "tablero[1][1] = maquina\n",
+    "\n",
+    "turno = 1\n",
+    "\n",
+    "while True:\n",
+    "    # Mostrar tablero\n",
+    "    print()\n",
+    "    print(tablero[0][0], \"|\", tablero[0][1], \"|\", tablero[0][2])\n",
+    "    print(\"---------\")\n",
+    "    print(tablero[1][0], \"|\", tablero[1][1], \"|\", tablero[1][2])\n",
+    "    print(\"---------\")\n",
+    "    print(tablero[2][0], \"|\", tablero[2][1], \"|\", tablero[2][2])\n",
+    "    print()\n",
+    "\n",
+    "    # TURNO DEL JUGADOR\n",
+    "    print(\"Tu turno (X)\")\n",
+    "    f = int(input(\"Fila (0-2): \"))\n",
+    "    c = int(input(\"Columna (0-2): \"))\n",
+    "\n",
+    "    if tablero[f][c] != \" \":\n",
+    "        print(\"Esa casilla ya está ocupada.\")\n",
+    "        continue\n",
+    "\n",
+    "    tablero[f][c] = jugador\n",
+    "    turno += 1\n",
+    "\n",
+    "    # Revisar si el jugador ganó\n",
+    "    if tablero[0][0] == tablero[0][1] == tablero[0][2] == jugador or \\\n",
+    "       tablero[1][0] == tablero[1][1] == tablero[1][2] == jugador or \\\n",
+    "       tablero[2][0] == tablero[2][1] == tablero[2][2] == jugador or \\\n",
+    "       tablero[0][0] == tablero[1][0] == tablero[2][0] == jugador or \\\n",
+    "       tablero[0][1] == tablero[1][1] == tablero[2][1] == jugador or \\\n",
+    "       tablero[0][2] == tablero[1][2] == tablero[2][2] == jugador or \\\n",
+    "       tablero[0][0] == tablero[1][1] == tablero[2][2] == jugador or \\\n",
+    "       tablero[0][2] == tablero[1][1] == tablero[2][0] == jugador:\n",
+    "        print(\"Ganaste tú... ¿cómo? 😳\")\n",
+    "        break\n",
+    "\n",
+    "    # TURNO DE LA MÁQUINA\n",
+    "    print(\"Turno de la máquina (O)\")\n",
+    "\n",
+    "    # Prioridad 1: si puede ganar, lo hace\n",
+    "    gano = False\n",
     "    for i in range(3):\n",
-    "        if all([cell == player for cell in board[i]]):\n",
-    "            return True\n",
-    "        if all([board[j][i] == player for j in range(3)]): \n",
-    "            return True\n",
+    "        # Filas\n",
+    "        if tablero[i].count(maquina) == 2 and tablero[i].count(\" \") == 1:\n",
+    "            for j in range(3):\n",
+    "                if tablero[i][j] == \" \":\n",
+    "                    tablero[i][j] = maquina\n",
+    "                    gano = True\n",
+    "                    break\n",
+    "        # Columnas\n",
+    "        col = [tablero[0][i], tablero[1][i], tablero[2][i]]\n",
+    "        if col.count(maquina) == 2 and col.count(\" \") == 1:\n",
+    "            for j in range(3):\n",
+    "                if tablero[j][i] == \" \":\n",
+    "                    tablero[j][i] = maquina\n",
+    "                    gano = True\n",
+    "                    break\n",
+    "    # Diagonales\n",
+    "    if not gano:\n",
+    "        diag1 = [tablero[0][0], tablero[1][1], tablero[2][2]]\n",
+    "        if diag1.count(maquina) == 2 and diag1.count(\" \") == 1:\n",
+    "            if tablero[0][0] == \" \":\n",
+    "                tablero[0][0] = maquina\n",
+    "            elif tablero[1][1] == \" \":\n",
+    "                tablero[1][1] = maquina\n",
+    "            else:\n",
+    "                tablero[2][2] = maquina\n",
+    "            gano = True\n",
     "\n",
-    "    # Verifica diagonales\n",
-    "    if all([board[i][i] == player for i in range(3)]):\n",
-    "        return True\n",
-    "    if all([board[i][2 - i] == player for i in range(3)]):\n",
-    "        return True\n",
+    "    if not gano:\n",
+    "        diag2 = [tablero[0][2], tablero[1][1], tablero[2][0]]\n",
+    "        if diag2.count(maquina) == 2 and diag2.count(\" \") == 1:\n",
+    "            if tablero[0][2] == \" \":\n",
+    "                tablero[0][2] = maquina\n",
+    "            elif tablero[1][1] == \" \":\n",
+    "                tablero[1][1] = maquina\n",
+    "            else:\n",
+    "                tablero[2][0] = maquina\n",
+    "            gano = True\n",
     "\n",
-    "    return False\n",
+    "    if gano:\n",
+    "        print(\"La máquina gana 😎\")\n",
+    "        break\n",
     "\n",
-    "def is_full(board):\n",
-    "    return all([cell != ' ' for row in board for cell in row])\n",
+    "    # Prioridad 2: bloquear al jugador si va a ganar\n",
+    "    bloqueo = False\n",
+    "    for i in range(3):\n",
+    "        # Filas\n",
+    "        if tablero[i].count(jugador) == 2 and tablero[i].count(\" \") == 1:\n",
+    "            for j in range(3):\n",
+    "                if tablero[i][j] == \" \":\n",
+    "                    tablero[i][j] = maquina\n",
+    "                    bloqueo = True\n",
+    "                    break\n",
+    "        # Columnas\n",
+    "        col = [tablero[0][i], tablero[1][i], tablero[2][i]]\n",
+    "        if col.count(jugador) == 2 and col.count(\" \") == 1:\n",
+    "            for j in range(3):\n",
+    "                if tablero[j][i] == \" \":\n",
+    "                    tablero[j][i] = maquina\n",
+    "                    bloqueo = True\n",
+    "                    break\n",
+    "    # Diagonales\n",
+    "    if not bloqueo:\n",
+    "        diag1 = [tablero[0][0], tablero[1][1], tablero[2][2]]\n",
+    "        if diag1.count(jugador) == 2 and diag1.count(\" \") == 1:\n",
+    "            if tablero[0][0] == \" \":\n",
+    "                tablero[0][0] = maquina\n",
+    "            elif tablero[1][1] == \" \":\n",
+    "                tablero[1][1] = maquina\n",
+    "            else:\n",
+    "                tablero[2][2] = maquina\n",
+    "            bloqueo = True\n",
     "\n",
-    "def tic_tac_toe():\n",
-    "    board = [[' ' for _ in range(3)] for _ in range(3)]\n",
-    "    current_player = 'X'\n",
+    "    if not bloqueo:\n",
+    "        diag2 = [tablero[0][2], tablero[1][1], tablero[2][0]]\n",
+    "        if diag2.count(jugador) == 2 and diag2.count(\" \") == 1:\n",
+    "            if tablero[0][2] == \" \":\n",
+    "                tablero[0][2] = maquina\n",
+    "            elif tablero[1][1] == \" \":\n",
+    "                tablero[1][1] = maquina\n",
+    "            else:\n",
+    "                tablero[2][0] = maquina\n",
+    "            bloqueo = True\n",
     "\n",
-    "    while True:\n",
-    "        print_board(board)\n",
-    "        print(f\"Turno del jugador {current_player}\")\n",
+    "    # Si no hay nada que bloquear o ganar, pone la ficha donde pueda\n",
+    "    if not gano and not bloqueo:\n",
+    "        hecho = False\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if tablero[i][j] == \" \":\n",
+    "                    tablero[i][j] = maquina\n",
+    "                    hecho = True\n",
+    "                    break\n",
+    "            if hecho:\n",
+    "                break\n",
     "\n",
-    "        try:\n",
-    "            row = int(input(\"Ingrese la fila (0, 1 o 2): \"))\n",
-    "            col = int(input(\"Ingrese la columna (0, 1 o 2): \"))\n",
-    "        except ValueError:\n",
-    "            print(\"Entrada no válida. Por favor, introduce números.\")\n",
-    "            continue\n",
-    "\n",
-    "        if row not in range(3) or col not in range(3):\n",
-    "            print(\"Número fuera de rango. Usa 0, 1 o 2.\")\n",
-    "            continue\n",
-    "\n",
-    "        if board[row][col] != ' ':\n",
-    "            print(\"La celda ya está ocupada. Elige otra.\")\n",
-    "            continue\n",
-    "\n",
-    "        board[row][col] = current_player\n",
-    "\n",
-    "        if check_winner(board, current_player):\n",
-    "            print_board(board)\n",
-    "            print(f\"¡Jugador {current_player} gana!\")\n",
-    "            break\n",
-    "\n",
-    "        if is_full(board):\n",
-    "            print_board(board)\n",
-    "            print(\"¡Empate!\")\n",
-    "            break\n",
-    "\n",
-    "        current_player = 'O' if current_player == 'X' else 'X'\n",
-    "\n",
-    "# Ejecutar el juego\n",
-    "tic_tac_toe()\n"
+    "    # Verificar si tablero lleno (empate)\n",
+    "    lleno = True\n",
+    "    for fila in tablero:\n",
+    "        for casilla in fila:\n",
+    "            if casilla == \" \":\n",
+    "                lleno = False\n",
+    "    if lleno:\n",
+    "        print(\"Empate. Nadie gana.😐\")\n",
+    "        break\n"
    ]
   }
  ],
